--- a/index.html
+++ b/index.html
@@ -30,6 +30,58 @@
                     <h3>Header 2</h3>
                 </div>
             </div>
+            <div class="card">
+                <div class="icon">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"/>
+                  </svg>
+                </div>
+                <div>
+                    <h2>Header 1</h2>
+                </div>
+                <div>
+                    <h3>Header 2</h3>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"/>
+                  </svg>
+                </div>
+                <div>
+                    <h2>Header 1</h2>
+                </div>
+                <div>
+                    <h3>Header 2</h3>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"/>
+                  </svg>
+                </div>
+                <div>
+                    <h2>Header 1</h2>
+                </div>
+                <div>
+                    <h3>Header 2</h3>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"/>
+                  </svg>
+                </div>
+                <div>
+                    <h2>Header 1</h2>
+                </div>
+                <div>
+                    <h3>Header 2</h3>
+                </div>
+            </div>
         </div>
     </main>
 </body>
