--- a/index.html
+++ b/index.html
@@ -1,88 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grundfos interview excercise</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <main>
-        <div class="title">
-            <h1>Grundfos interview excercise</h1>
+      <div class="title">
+        <h1>Grundfos interview excercise</h1>
+      </div>
+      <div class="button-menu">
+        <div class="button">Left menu button</div>
+        <div class="button">Right menu button</div>
+      </div>
+      <div class="dropdown">
+        <div class="card">
+          <div class="icon">
+            <svg
+              class="w-6 h-6"
+              fill="none"
+              stroke="currentColor"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"
+              />
+            </svg>
+          </div>
+          <div>
+            <h2>Header 1</h2>
+          </div>
+          <div>
+            <h3>Header 2</h3>
+          </div>
+          <div class="dropdown-content">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+          </div>
         </div>
-        <div class="button-menu">
-            <div class="button">Left menu button</div>
-            <div class="button">Right menu button</div>
+        <div class="card">
+          <div class="icon">
+            <svg
+              class="w-6 h-6"
+              fill="none"
+              stroke="currentColor"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"
+              />
+            </svg>
+          </div>
+          <div>
+            <h2>Header 1</h2>
+          </div>
+          <div>
+            <h3>Header 2</h3>
+          </div>
         </div>
-        <div class="dropdown">
-            <div class="card">
-                <div class="icon">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"/>
-                  </svg>
-                </div>
-                <div>
-                    <h2>Header 1</h2>
-                </div>
-                <div>
-                    <h3>Header 2</h3>
-                </div>
-            </div>
-            <div class="card">
-                <div class="icon">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"/>
-                  </svg>
-                </div>
-                <div>
-                    <h2>Header 1</h2>
-                </div>
-                <div>
-                    <h3>Header 2</h3>
-                </div>
-            </div>
-            <div class="card">
-                <div class="icon">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"/>
-                  </svg>
-                </div>
-                <div>
-                    <h2>Header 1</h2>
-                </div>
-                <div>
-                    <h3>Header 2</h3>
-                </div>
-            </div>
-            <div class="card">
-                <div class="icon">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"/>
-                  </svg>
-                </div>
-                <div>
-                    <h2>Header 1</h2>
-                </div>
-                <div>
-                    <h3>Header 2</h3>
-                </div>
-            </div>
-            <div class="card">
-                <div class="icon">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"/>
-                  </svg>
-                </div>
-                <div>
-                    <h2>Header 1</h2>
-                </div>
-                <div>
-                    <h3>Header 2</h3>
-                </div>
-            </div>
+        <div class="card">
+          <div class="icon">
+            <svg
+              class="w-6 h-6"
+              fill="none"
+              stroke="currentColor"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"
+              />
+            </svg>
+          </div>
+          <div>
+            <h2>Header 1</h2>
+          </div>
+          <div>
+            <h3>Header 2</h3>
+          </div>
         </div>
+        <div class="card">
+          <div class="icon">
+            <svg
+              class="w-6 h-6"
+              fill="none"
+              stroke="currentColor"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"
+              />
+            </svg>
+          </div>
+          <div>
+            <h2>Header 1</h2>
+          </div>
+          <div>
+            <h3>Header 2</h3>
+          </div>
+        </div>
+        <div class="card">
+          <div class="icon">
+            <svg
+              class="w-6 h-6"
+              fill="none"
+              stroke="currentColor"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"
+              />
+            </svg>
+          </div>
+          <div>
+            <h2>Header 1</h2>
+          </div>
+          <div>
+            <h3>Header 2</h3>
+          </div>
+        </div>
+      </div>
     </main>
-</body>
+  </body>
 </html>
