--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grundfos interview excercise</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -42,9 +49,9 @@
               <h3>Header 2</h3>
             </div>
             <div class="dropdown-content">
-              <a href="#" target="_blank">Link 1</a>
-              <a href="#" target="_blank">Link 2</a>
-              <a href="#" target="_blank">Link 3</a>
+              <a href="subpage.html" target="_blank">Link 1</a>
+              <a href="subpage.html" target="_blank">Link 2</a>
+              <a href="subpage.html" target="_blank">Link 3</a>
             </div>
           </div>
         </div>
@@ -73,9 +80,9 @@
               <h3>Header 2</h3>
             </div>
             <div class="dropdown-content">
-              <a href="#" target="_blank">Link 1</a>
-              <a href="#" target="_blank">Link 2</a>
-              <a href="#" target="_blank">Link 3</a>
+              <a href="subpage.html" target="_blank">Link 1</a>
+              <a href="subpage.html" target="_blank">Link 2</a>
+              <a href="subpage.html" target="_blank">Link 3</a>
             </div>
           </div>
         </div>
@@ -104,9 +111,9 @@
               <h3>Header 2</h3>
             </div>
             <div class="dropdown-content">
-              <a href="#" target="_blank">Link 1</a>
-              <a href="#" target="_blank">Link 2</a>
-              <a href="#" target="_blank">Link 3</a>
+              <a href="subpage.html" target="_blank">Link 1</a>
+              <a href="subpage.html" target="_blank">Link 2</a>
+              <a href="subpage.html" target="_blank">Link 3</a>
             </div>
           </div>
         </div>
@@ -135,9 +142,9 @@
               <h3>Header 2</h3>
             </div>
             <div class="dropdown-content">
-              <a href="#" target="_blank">Link 1</a>
-              <a href="#" target="_blank">Link 2</a>
-              <a href="#" target="_blank">Link 3</a>
+              <a href="subpage.html" target="_blank">Link 1</a>
+              <a href="subpage.html" target="_blank">Link 2</a>
+              <a href="subpage.html" target="_blank">Link 3</a>
             </div>
           </div>
         </div>
@@ -166,9 +173,9 @@
               <h3>Header 2</h3>
             </div>
             <div class="dropdown-content">
-              <a href="#" target="_blank">Link 1</a>
-              <a href="#" target="_blank">Link 2</a>
-              <a href="#" target="_blank">Link 3</a>
+              <a href="subpage.html" target="_blank">Link 1</a>
+              <a href="subpage.html" target="_blank">Link 2</a>
+              <a href="subpage.html" target="_blank">Link 3</a>
             </div>
           </div>
         </div>
