Added media queries and other changes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="button">Left menu button</div>
         <div class="button">Right menu button</div>
       </div>
-      <div class="wrapper">
+      <div class="dropdown-wrapper">
         <div class="dropdown">
           <div class="card">
             <div class="icon">
